# ChangeLog for dev-java/jeuclid-core
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  dev-java/jeuclid-core: Updating remote-id in metadata.xml

  10 Jan 2015; Marius Brehler <marbre@linux.sungazer.de>
  jeuclid-core-3.1.8.ebuild, jeuclid-core-3.1.9-r1.ebuild:
  Move to EAPI=5

*jeuclid-core-3.1.9-r1 (27 Jul 2014)

  27 Jul 2014; Guillaume Horel <guillaume.horel@gmail.com>
  +files/jeuclid-core-cast-issue.patch, +jeuclid-core-3.1.9-r1.ebuild,
  -jeuclid-core-3.1.9.ebuild:
  dev-java/jeuclid-core: upgrade dependencies

*jeuclid-core-3.1.9 (14 May 2012)

  14 May 2012; Sébastien Fabbro <bicatali@gentoo.org>
  +jeuclid-core-3.1.9.ebuild:
  Version bump

  13 Jul 2010; Andreas K. Huettel (dilfridge) <mail@akhuettel.de>
  jeuclid-core-3.1.8.ebuild:
  Added comment about dependency: dev-java/jcip-annotations is only in the
  java overlay. Removed pmask for now.

  11 Jul 2010; Andreas K. Huettel (dilfridge) <mail@akhuettel.de> ChangeLog:
  Masked for removal since dependencies cannot be fulfilled.

  22 Jan 2010; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml:
  Initial import. Ebuild initially submitted by Jiri Tyr, bug #224995