@@ -1,2 +1,1 @@
-DIST jeuclid-parent-3.1.8-src.zip 8844588 SHA256 4c80740a78bef42c6e5b87e09df931448caa210469382270ac4f70016ac21a0c
 DIST jeuclid-parent-3.1.9-src.zip 8858746 SHA256 80bddad60c02bb55d430cab78818c3a43223877c62bc71f1c7326e2ff8fbe362 SHA512 ae55ffa469664abbf5545479d7968fd36e003ccc3f21687a43e79d843d6d3855b779ebeca3d38cc0c4a466c2de21bffce8e7d14cb2199f57e125b58ac100f203 WHIRLPOOL 610e7dad58bece09eb1b0caec06de1c9afbb8bfaa9639c78c30b64b60d17029c8ed8d58c96b89d8f395a8fcab2025d274e781ed4b3dcb7ba7ed738375f299e88
